--- a/css/design-project.css
+++ b/css/design-project.css
@@ -1,10 +1,17 @@
-* root{
+* {
+    box-sizing: border-box;
+}
+
+:root{
     --gray-dark: #e6e6e6;
     --gray-light: #f0f0f0;
     --blue: #00aba9;
     --green: #7cb06c;
     --orange: #EB9D3A;
     --red: #e6563b;
+}
+body {
+    background-color: var(--gray-light);
 }
 
 h1 {
@@ -25,3 +32,22 @@ h4 {
 h5 {
     font-size: 28px;
 }
+
+.container {
+    margin: 0 10px;
+}
+
+#main-content {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 10em 12em 10em 350px 250px;
+}
+
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) { ... }
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) { ... }
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) { ... }
+/*Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) { ... }
