--- a/css/design-project.css
+++ b/css/design-project.css
@@ -15,7 +15,9 @@ body {
     padding: 0;
     margin: 0;
 }
-
+h1,h2,h3,h4,h5 {
+    font-family: 'Anton', sans-serif;
+}
 h1 {
     font-size: 64px;
 }
@@ -81,6 +83,28 @@ h5 {
     text-align: center;
     padding: 0;
     margin: 0;
+}
+
+#native-nav {
+    height: 3em;
+    /*border: 1px solid black;*/
+    margin: 0.5em 0;
+    display: flex;
+    justify-content: center;
+}
+
+#company-ad {
+    width: 100vw;
+    text-align: center;
+
+}
+
+#company-ad > h2 {
+    margin: .5em 0;
+}
+
+#company-ad h4 {
+    margin: 24px 0;
 }
 
 
