--- a/css/design-project.css
+++ b/css/design-project.css
@@ -158,6 +158,62 @@ h5 {
     background-color: var(--orange);
 }
 
+.abel {
+    font-family: 'Abel', sans-serif;
+}
+
+#featured-title {
+    text-align: center;
+    margin-bottom: 40px;
+    font-weight: bold;
+}
+
+#project-image-container {
+    border: 5px solid var(--gray-dark);
+    border-radius: 3px;
+    width: 85vw;
+    margin: 0 auto;
+}
+
+#project-image-container > img {
+    width: 100%;
+}
+
+.feature-project-specs {
+    border-radius: 50%;
+    border: none;
+    height: 25px;
+    width: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+    font-family: 'Anton', sans-serif;
+}
+
+#specs-container div:nth-child(4){
+    margin-right: 0;
+}
+
+#specs-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#featured-project-info {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 85vw;
+    margin: 5px auto;
+    grid-column-gap: 50px;
+}
+
+#featured-project-title {
+    text-align: center;
+    margin: 0;
+    font-weight: bold;
+}
 
 
 /*Small devices (landscape phones, 576px and up)*/
