--- a/css/design-project.css
+++ b/css/design-project.css
@@ -64,10 +64,11 @@ h5 {
 
 #logoimg {
     position: absolute;
-    left: 30%;
-    top: -45%;
-    width: 150px;
-    height: 150px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 105px;
+    height: 105px;
     border-radius: 50%;
 }
 
@@ -128,9 +129,9 @@ h5 {
 .circle {
     margin: 0 auto;
     border-radius: 50%;
-    border: 8px solid white;
-    height: 150px;
-    width: 150px;
+    border: 6px solid white;
+    height: 105px;
+    width: 105px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -139,7 +140,7 @@ h5 {
 .circle p {
     font-family: 'Anton', sans-serif;
     color: white;
-    font-size: 28px;
+    font-size: 24px;
 }
 
 .red {
@@ -182,13 +183,14 @@ h5 {
 .feature-project-specs {
     border-radius: 50%;
     border: none;
-    height: 25px;
-    width: 25px;
+    height: 18px;
+    width: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 5px;
     font-family: 'Anton', sans-serif;
+    font-size: x-small;
 }
 
 #specs-container div:nth-child(4){
@@ -215,9 +217,52 @@ h5 {
     font-weight: bold;
 }
 
+hr {
+    display: none;
+}
 
 /*Small devices (landscape phones, 576px and up)*/
-/*@media (min-width: 576px) { ... }*/
+@media (min-width: 576px) {
+    #header-logo-container {
+        margin: 3.5em 0 2.5em 0;
+    }
+
+    #visualdesign {
+        font-size: 40px;
+    }
+
+    #circlecont {
+        display: flex;
+        margin: 2.5em 2.5em 1em 2.5em;
+
+    }
+
+    .circle {
+        margin: 0 .2em;
+        border-radius: 50%;
+        border: 8px solid white;
+        /*height: 110px;*/
+        /*width: 110px;*/
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .circle p {
+        font-family: 'Anton', sans-serif;
+        color: white;
+        font-size: 20px;
+    }
+
+    hr {
+        display: block;
+        width: 70vw;
+        color: var(--gray-light);
+    }
+}
+
+
+
 /*Medium devices (tablets, 768px and up)*/
 /*@media (min-width: 768px) { ... }*/
 /*Large devices (desktops, 992px and up)*/
