--- a/css/design-project.css
+++ b/css/design-project.css
@@ -294,21 +294,21 @@ hr {
 
 /*Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) {
-    #header-logo-container {
+    #header-container {
         margin: 3.5em 0 2.5em 0;
     }
 
-    #visualdesign {
+    #company-page-title {
         font-size: 40px;
     }
 
-    #circlecont {
+    #pillar-div-list {
         display: flex;
         margin: 2.5em 2.5em 1em 2.5em;
 
     }
 
-    .circle {
+    .pillar {
         margin: 0 .2em;
         border-radius: 50%;
         border: 8px solid white;
@@ -319,7 +319,7 @@ hr {
         align-items: center;
     }
 
-    .circle p {
+    .pillar-text {
         font-family: 'Anton', sans-serif;
         color: white;
         font-size: 20px;
