--- a/css/design-project.css
+++ b/css/design-project.css
@@ -11,10 +11,15 @@
     --red: #e6563b;
 }
 
+.fa-twitter {
+    color: #2AA3F0;
+}
+
 body {
     background-color: var(--gray-light);
     padding: 0;
     margin: 0;
+    width: 100vw;
 }
 
 /* === HEADER PROPERTIES === */
@@ -41,10 +46,6 @@ h4 {
 h5 {
     font-size: 28px;
 }
-
-/*.container {*/
-/*    margin: 0 10px;*/
-/*}*/
 
 /* === NATIVE GRID LAYOUT === */
 #main-content {
@@ -113,6 +114,10 @@ h5 {
     margin: 24px 0;
 }
 
+#company-location-header {
+    margin-bottom: 0;
+}
+
 /* === 4 MAIN PILLARS === */
 #pillar-container {
     display: flex;
@@ -138,12 +143,6 @@ h5 {
     justify-content: center;
     align-items: center;
 }
-
-/*.pillar p {*/
-/*    font-family: 'Anton', sans-serif;*/
-/*    color: white;*/
-/*    font-size: 24px;*/
-/*}*/
 
 /* Changed p tag to span tag and transferred styling */
 .pillar-text {
@@ -176,59 +175,6 @@ h5 {
 .anton {
     font-family: 'Anton', sans-serif;
 }
-
-
-/*#project-image-container {*/
-/*    border: 5px solid var(--gray-dark);*/
-/*    border-radius: 3px;*/
-/*    width: 85vw;*/
-/*    margin: 0 auto;*/
-/*}*/
-
-/*#project-image-container > img {*/
-/*    width: 100%;*/
-/*    grid-area: 1 / 1 / 2 / 2;*/
-/*}*/
-
-/*.feature-project-specs {*/
-/*    border-radius: 50%;*/
-/*    border: none;*/
-/*    height: 18px;*/
-/*    width: 18px;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    margin: 0 5px;*/
-/*    font-family: 'Anton', sans-serif;*/
-/*    font-size: x-small;*/
-/*}*/
-
-/*#specs-container div:nth-child(4){*/
-/*    margin-right: 0;*/
-/*}*/
-
-/*#specs-container {*/
-/*    grid-area: 2 / 1 / 3 / 2;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*}*/
-
-/*#featured-project-info {*/
-/*    display: grid;*/
-/*    grid-template-columns: repeat(2, 1fr);*/
-/*    grid-template-rows: 4fr 1fr;*/
-/*    width: 85vw;*/
-/*    margin: 5px auto;*/
-/*    grid-column-gap: 50px;*/
-/*}*/
-
-/*#featured-project-title {*/
-/*    text-align: center;*/
-/*    margin: 0;*/
-/*    font-weight: bold;*/
-/*}*/
-
 
 /* === SELECTED FEATURED TITLE === */
 #selected-featured-title {
@@ -291,6 +237,28 @@ hr {
     margin-left: auto;
 }
 
+/*#featured-project-2 {*/
+/*    display: none;*/
+/*}*/
+
+/*#featured-project-3 {*/
+/*    display: none;*/
+/*}*/
+
+/*#featured-project-4 {*/
+/*    display:none;*/
+/*}*/
+
+
+#featured-projects-container section:nth-child(n+2) {
+    display: none;
+}
+
+/* === news feed === */
+
+#news-f-container {
+    display: none;
+}
 
 /*Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) {
@@ -307,6 +275,20 @@ hr {
         margin: 2.5em 2.5em 1em 2.5em;
 
     }
+
+    #featured-projects-container {
+        display: grid;
+        grid-row-gap: 2em;
+        grid-column-gap: 1em;
+        margin: 0 2em;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    #featured-projects-container section:nth-child(n+2) {
+        display: inherit;
+    }
+
 
     .pillar {
         margin: 0 .2em;
@@ -330,12 +312,43 @@ hr {
         width: 70vw;
         color: var(--gray-light);
     }
+
 }
 
 
 
 /*Medium devices (tablets, 768px and up)*/
-/*@media (min-width: 768px) { ... }*/
+@media (min-width: 768px) {
+   #med-grid {
+       display: grid;
+       grid-template-areas:
+            "selwork selwork newsfeed"
+            "projcont projcont newsfeed"
+            "projcont projcont newsfeed";
+   }
+
+    #selected-featured-title {
+        grid-area: selwork;
+    }
+
+    #featured-projects-container {
+       display: inline-grid;
+        grid-area: projcont;
+
+   }
+
+    #news-f-container {
+        display: inline-grid;
+        grid-area: newsfeed;
+    }
+
+    #news-f-container img {
+        width: 25%;
+    }
+
+}
+
+
 /*Large devices (desktops, 992px and up)*/
 /*@media (min-width: 992px) { ... }*/
 /*Extra large devices (large desktops, 1200px and up)*/
