--- a/css/design-project.css
+++ b/css/design-project.css
@@ -322,20 +322,29 @@ hr {
    #med-grid {
        display: grid;
        grid-template-areas:
-            "selwork selwork newsfeed"
+            "selwork selwork feedtitle"
             "projcont projcont newsfeed"
             "projcont projcont newsfeed";
+       grid-column-gap: 1em;
    }
 
     #selected-featured-title {
         grid-area: selwork;
+        text-align: left;
+        margin: 1.4em;
     }
 
     #featured-projects-container {
        display: inline-grid;
         grid-area: projcont;
-
+        margin-left: 1.5em;
+        grid-row-gap: 3em;
+        grid-column-gap: 3em;
    }
+    .featured-project-card {
+        margin: 0 0.5em;
+        grid-template-columns: 2fr 1fr;
+    }
 
     #news-f-container {
         display: inline-grid;
@@ -344,6 +353,35 @@ hr {
 
     #news-f-container img {
         width: 25%;
+    }
+
+    #feed-title {
+        text-align: left;
+        margin-top: 1.4em;
+        grid-area: feedtitle;
+    }
+
+    #news-feed {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    #news-feed div {
+        display: flex;
+        /*margin-bottom: 2em;*/
+    }
+
+    #news-feed div > img {
+        width: 4em;
+        height: 4em;
+        margin-right: 1em;
+        border: 2px solid var(--gray-dark);
+        border-radius: 3px;
+    }
+
+    #twitter-feed {
+        margin-top: 2em;
     }
 
 }
