--- a/css/design-project.css
+++ b/css/design-project.css
@@ -444,6 +444,31 @@ hr {
 
 
 /*Large devices (desktops, 992px and up)*/
-/*@media (min-width: 992px) { ... }*/
+@media (min-width: 992px) {
+    body {
+        display: grid;
+        grid-template-columns: 1fr 2fr 2fr 1fr;
+    }
+
+    #main-content {
+        grid-area: 1 / 2 / -1 / 4;
+    }
+
+    /*#large-breakpoint-container {*/
+    /*    display: grid;*/
+    /*    grid-template-columns: 1fr 3fr 1fr;*/
+    /*    grid-template-areas:*/
+    /*        ". main main main ."*/
+    /*        ". main main main .";*/
+    /*}*/
+
+    /*#main-content {*/
+    /*    grid-area: main;*/
+    /*}*/
+
+    /*#large-breakpoint-container {*/
+    /*    width: 80vw;*/
+    /*}*/
+}
 /*Extra large devices (large desktops, 1200px and up)*/
 /*@media (min-width: 1200px) { ... }*/
