--- a/css/design-project.css
+++ b/css/design-project.css
@@ -51,13 +51,11 @@ h5 {
 #main-content {
     display: grid;
     grid-template-columns: 1fr;
-    /*grid-template-rows: 1fr 12em 10em 350px 250px;*/
 }
 
 /* === PAGE HEADER === */
 #header-container {
     margin: 3.5em 0;
-    /*border: 3px solid black;*/
     height: 75px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -98,7 +96,6 @@ h5 {
 /* === NATIVE-NAV CONTAINER*/
 #native-nav {
     height: 3em;
-    /*border: 1px solid black;*/
     margin: 0.5em 0;
     display: flex;
     justify-content: center;
@@ -240,19 +237,6 @@ hr {
 .featured-pillar-container div:nth-child(1){
     margin-left: auto;
 }
-
-/*#featured-project-2 {*/
-/*    display: none;*/
-/*}*/
-
-/*#featured-project-3 {*/
-/*    display: none;*/
-/*}*/
-
-/*#featured-project-4 {*/
-/*    display:none;*/
-/*}*/
-
 
 #featured-projects-container section:nth-child(n+2) {
     display: none;
@@ -411,18 +395,10 @@ hr {
 
 
     #news-feed {
-        /*display: flex;*/
-        /*flex-direction: column;*/
-        /*justify-content: space-evenly;*/
-
         display: inline-grid;
         grid-template-columns: 1fr 2fr;
     }
 
-    #news-feed div {
-        /*display: flex;*/
-        /*margin-bottom: 2em;*/
-    }
 
     #news-feed div > img {
         width: 4em;
@@ -445,30 +421,38 @@ hr {
 
 /*Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) {
-    body {
-        display: grid;
-        grid-template-columns: 1fr 2fr 2fr 1fr;
+    #logo {
+        left: 15em;
     }
 
+    #medhead {
+        left: 13em;
+    }
     #main-content {
-        grid-area: 1 / 2 / -1 / 4;
+        display: inline-grid;
     }
 
-    /*#large-breakpoint-container {*/
-    /*    display: grid;*/
-    /*    grid-template-columns: 1fr 3fr 1fr;*/
-    /*    grid-template-areas:*/
-    /*        ". main main main ."*/
-    /*        ". main main main .";*/
-    /*}*/
+    #med-grid {
+        display: inline-grid;
+        margin: 0 0 0 10em;
+        width: 70vw;
+    }
 
-    /*#main-content {*/
-    /*    grid-area: main;*/
-    /*}*/
+    hr {
+        width: calc(100vw - 24em);
+    }
 
-    /*#large-breakpoint-container {*/
-    /*    width: 80vw;*/
-    /*}*/
+   #large-breakpoint-container {
+        display: grid;
+        grid-template-areas:
+            ". main main main . "
+            ". main main main . "
+            ". main main main . "
+            ". main main main . "
+            ". main main main . "
+            ". main main main . ";
+    }
+
 }
 /*Extra large devices (large desktops, 1200px and up)*/
 /*@media (min-width: 1200px) { ... }*/
